<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingStart="@dimen/horizontal_spacing"
  android:paddingTop="@dimen/vertical_spacing"
  android:paddingEnd="@dimen/horizontal_spacing"
  android:paddingBottom="@dimen/vertical_spacing">

  <TextView
    android:id="@+id/tvTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-medium"
    android:text="@string/data_collection"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tvForeword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/vertical_spacing_half"
    android:layout_marginBottom="@dimen/vertical_spacing"
    android:text="@string/gdpr_explanation"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@id/switchPerf"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/switchPerf"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-medium"
    android:text="@string/performance_metrics"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@id/switchCrash"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvForeword" />

  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/switchCrash"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-medium"
    android:text="@string/crash_reporting"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@id/switchAnalytics"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/switchPerf" />

  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/switchAnalytics"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/vertical_spacing"
    android:fontFamily="sans-serif-medium"
    android:text="@string/analytics"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@id/btnAccept"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/switchCrash" />

  <Button
    android:id="@+id/btnAccept"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/accept"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>